--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   
-  
-  <script src=""></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js'></script>
+  <script src="./src/script.js"></script>
 </body>
 </html>
