--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   <title>Github | Demo</title>
 </head>
 <body>
-  
+  <div id="app">
+    <section>
+      <div>
+        <div class="banner">
+        </div>
+        <div class="main">
+          <div class="search">
+            <input type="text" placeholder="用戶ID">
+            <button>查詢</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js'></script>
   <script src="./src/script.js"></script>
