add_getName func

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="container">
             <div class="search">
               <input type="text" placeholder="Search Username" v-model.trim='username'>
-              <button @click='getRepos'>查詢</button>
+              <button @click='getName'>查詢</button>
             </div>
             <template>
               <search-component :data='data'/>
