--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           </div>
         </div>
       </div>
+      <div class="loading" v-if='!loading'>
+        loading...
+      </div>
     </section>
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js'></script>
