--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./dist/css/main.css">
   <title>Github | Demo</title>
 </head>
@@ -22,7 +23,6 @@
               <button @click='getName'>查詢</button>
             </div>
             <div class="list">
-              <div class="repo-title"></div>
               <template v-for='e,i in repoData'>
                 <search-component :repo-data='repoData[i]' />
               </template>
