--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
       <div>
         <div class="banner">
         </div>
-        <div class="main">
+        <header>
           <div class="container">
             <div class="search">
               <input type="text" placeholder="Search Username" v-model.trim='username'>
               <button @click='getName'>查詢</button>
             </div>
-            <div class="list">
-              <template v-for='e,i in repoData'>
-                <search-component :repo-data='repoData[i]' />
-              </template>
-            </div>
-
           </div>
-        </div>
+        </header>
+        <main class="main">
+          <div class="container">
+            <div class="grid">
+              <div class="profile col-8"></div>
+              <div class="list col-16">
+                <template v-for='e,i in repoData'>
+                  <search-component :repo-data='repoData[i]' />
+                </template>
+              </div>
+            </div>
+          </div>
+        </main>
       </div>
       <div class="loading" v-if='!loading'>
         loading...
