--- a/index.html
+++ b/index.html
@@ -43,13 +43,23 @@
         </header>
         <main class="main">
           <div class="container">
-            <div class="grid">
-              <div class="profile col-8">
+            <div class="grid" v-if='userExistence'>
+              <div class="col-6">
                 <template>
                   <user-profile :user-data='userData'/>
                 </template>
               </div>
-              <div class="list col-16">
+              <div class="col-18">
+                <div class='classify'>
+                  <div class="classify-wrap">
+                    <p>Repositories</p>
+                    <p class="classify-count">{{repoData.length}}</p>
+                  </div>
+                </div>
+                <div class="sort-line"></div>
+                <div class="no-repo" v-if='repoData.length <= 0 && userExistence'>
+                  No public repos found.  
+                </div>
                 <template v-for='e,i in repoData'>
                   <search-component :repo-data='repoData[i]' />
                 </template>
