--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
               <div class="search-wrap">
                 <div class="search-content">
                   <input class='search-content-input' type="text" placeholder="Search Username" v-model.trim='username'
-                    @keyup.enter='getName' @click.stop='inputWidth = true' @select.stop='inputWidth = true'
-                    @mousedown='inputWidth = true'>
+                    @keyup.enter='getName' @click.stop='inputWidth = true; nowHistory = null'
+                    @select.stop='inputWidth = true; nowHistory = null' @mousedown='inputWidth = true'
+                    @input='nowHistory = null' @keydown.up.prevent.stop='historyIndexHandler(-1)'
+                    @keydown.down.prevent.stop='historyIndexHandler(1)'>
                   <!-- <button @click='getName'>查詢</button> -->
                   <div class="search-content-img" @click.stop='username=""'>
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="22" height="22" viewBox="0 0 128 128"
@@ -47,17 +49,36 @@
                     </svg>
                   </div>
                 </div>
-                <div class="search-history" :style="{bottom: -32*(i+1) +'px'}" v-for='(e,i) in searched' @click='username=e;getName()'>
-                  <p>{{e}}</p>
-                  <div @click.stop='deleteNameHandler(i)'>
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="14" height="14" viewBox="0 0 172 172"
+                <div class="search-history" :class='{"history-on":i===nowHistory}' :style="{bottom: -32*(i+1) +'px'}"
+                  v-for='(e,i) in searched' @click='username=e;getName()' @mouseenter='nowHistory = i'>
+                  <div class='search-history-title'>
+                    <div>
+                      <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16"
+                        viewBox="0 0 172 172" style=" fill:#000000;">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                          stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                          font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                          style="mix-blend-mode: normal">
+                          <path d="M0,172v-172h172v172z" fill="none"></path>
+                          <g class="search-history-svg">
+                            <path
+                              d="M86,21.5c-17.7627,0 -32.25,14.4873 -32.25,32.25c0,17.7627 14.4873,32.25 32.25,32.25c17.7627,0 32.25,-14.4873 32.25,-32.25c0,-17.7627 -14.4873,-32.25 -32.25,-32.25zM86,86c-29.60449,0 -53.75,24.14551 -53.75,53.75h10.75c0,-23.80957 19.19043,-43 43,-43c23.80957,0 43,19.19043 43,43h10.75c0,-29.60449 -24.14551,-53.75 -53.75,-53.75zM86,32.25c11.92578,0 21.5,9.57422 21.5,21.5c0,11.92578 -9.57422,21.5 -21.5,21.5c-11.92578,0 -21.5,-9.57422 -21.5,-21.5c0,-11.92578 9.57422,-21.5 21.5,-21.5z">
+                            </path>
+                          </g>
+                        </g>
+                      </svg>
+                    </div>
+                    <p>{{e}}</p>
+                  </div>
+                  <div class='search-history-del' @click.stop='deleteNameHandler(i)'>
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15" height="15" viewBox="0 0 172 172"
                       style=" fill:#000000;">
                       <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
                         stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
                         font-family="none" font-weight="none" font-size="none" text-anchor="none"
                         style="mix-blend-mode: normal">
                         <path d="M0,172v-172h172v172z" fill="none"></path>
-                        <g id="original-icon" fill="#000000">
+                        <g id="original-icon" class="search-history-svg">
                           <path
                             d="M35.76335,28.59668c-2.91628,0.00077 -5.54133,1.76841 -6.63871,4.47035c-1.09737,2.70194 -0.44825,5.79937 1.64164,7.83336l45.09961,45.09961l-45.09961,45.09961c-1.8722,1.79752 -2.62637,4.46674 -1.97164,6.97823c0.65473,2.51149 2.61604,4.4728 5.12753,5.12753c2.51149,0.65473 5.18071,-0.09944 6.97823,-1.97165l45.09961,-45.09961l45.09961,45.09961c1.79752,1.87223 4.46675,2.62641 6.97825,1.97168c2.5115,-0.65472 4.47282,-2.61605 5.12755,-5.12755c0.65472,-2.5115 -0.09946,-5.18073 -1.97168,-6.97825l-45.09961,-45.09961l45.09961,-45.09961c2.11962,-2.06035 2.75694,-5.21064 1.60486,-7.93287c-1.15207,-2.72224 -3.85719,-4.45797 -6.81189,-4.37084c-1.86189,0.05548 -3.62905,0.83363 -4.92708,2.1696l-45.09961,45.09961l-45.09961,-45.09961c-1.34928,-1.38698 -3.20203,-2.16948 -5.13704,-2.1696z">
                           </path>
@@ -65,7 +86,6 @@
                       </g>
                     </svg>
                   </div>
-
                 </div>
               </div>
             </div>
